assets/css/main.css
/* ... */
		@media screen and (min-width: 481px) and (max-width: 736px) {

			#navPanel nav {
				padding: 2.5em 1.75em;
			}

		}

	body.is-navPanel-visible #wrapper {
		pointer-events: none;
		cursor: default;
		opacity: 0.25;
	}

	body.is-navPanel-visible #navPanel {
		-moz-transform: translateX(0);
		-webkit-transform: translateX(0);
		-ms-transform: translateX(0);
		transform: translateX(0);
		visibility: visible;
	}

/* Banner */

	#header + #banner {
		margin-top: -1rem;
	}

	#banner.wrapper {
		padding-bottom: 14rem;
		padding-top: 16rem;
	}

	#banner .inner {
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
	}

	#banner .content {
		-moz-transition: opacity 0.75s ease-in-out, -moz-transform 0.75s ease-in-out;
		-webkit-transition: opacity 0.75s ease-in-out, -webkit-transform 0.75s ease-in-out;
		-ms-transition: opacity 0.75s ease-in-out, -ms-transform 0.75s ease-in-out;
		transition: opacity 0.75s ease-in-out, transform 0.75s ease-in-out;
		padding-right: 2.75rem;
		width: 50%;
		margin-top:5em;
	}

		#banner .content > :last-child {
			margin-bottom: 0;
		}

		#banner .content p {
			font-size: 1.25rem;
		}

	#banner .image-wrapper {
		-moz-transition: opacity 1.5s ease-in-out, -moz-transform 0.75s ease-in-out;
		-webkit-transition: opacity 1.5s ease-in-out, -webkit-transform 0.75s ease-in-out;
		-ms-transition: opacity 1.5s ease-in-out, -ms-transform 0.75s ease-in-out;
		transition: opacity 1.5s ease-in-out, transform 0.75s ease-in-out;
		position: relative;
		width: 50%;
	}

		#banner .image-wrapper .frame {
			height: auto;
			width: 110%;
			margin-top: -13em;
			margin-left: -3em;
  			transform: scaleX(-1);
		}

		#banner .image-wrapper .image {
			left: 0;
			margin: 0 auto;
			position: absolute;
			right: 0;
			top: -6rem;
			width: 100%;
			z-index: -1;
		}

			#banner .image-wrapper .image img {
				object-fit: cover;
				object-position: center;
				width: 100%;
			}

	body.is-preload #banner .content {
		-moz-transform: translateX(-0.5rem);
		-webkit-transform: translateX(-0.5rem);
		-ms-transform: translateX(-0.5rem);
		transform: translateX(-0.5rem);
		opacity: 0;
	}

	body.is-preload #banner .image-wrapper {
		-moz-transform: translateY(0.5rem);
		-webkit-transform: translateY(0.5rem);
		-ms-transform: translateY(0.5rem);
		transform: translateY(0.5rem);
		opacity: 0;
	}

	@media screen and (max-width: 1680px) {

		#banner.wrapper {
			padding-bottom: 14rem;
			padding-top: 14rem;
		}

	}

	@media screen and (max-width: 1280px) {

		#banner.wrapper {
			margin-left: auto;
			margin-right: auto;
			max-width: 100%;
			padding-bottom: 2.5rem;
			padding-top: 10rem;
			text-align: center;
		}

		#banner ul.actions {
			-moz-justify-content: center;
			-webkit-justify-content: center;
			-ms-justify-content: center;
			justify-content: center;
		}

		#banner .inner {
			-moz-flex-direction: row;
			-webkit-flex-direction: row;
			-ms-flex-direction: row;
			flex-direction: row;
			-moz-flex-wrap: wrap;
			-webkit-flex-wrap: wrap;
			-ms-flex-wrap: wrap;
			flex-wrap: wrap;
		}

		#banner .content {
			-moz-order: 2;
			-webkit-order: 2;
			-ms-order: 2;
			order: 2;
			padding-right: 0;
			text-align: center;
			width: 100%;
		}

		#banner .image-wrapper {
			-moz-order: 1;
			-webkit-order: 1;
			-ms-order: 1;
			order: 1;
			margin-left: auto;
			margin-right: auto;
			margin-bottom: 2.75rem;
			width: 30rem;
			max-width: 100%;
		}

		body.is-preload #banner .content {
			-moz-transform: translateY(0.5rem);
			-webkit-transform: translateY(0.5rem);
			-ms-transform: translateY(0.5rem);
			transform: translateY(0.5rem);
		}

		body.is-preload #banner .image-wrapper {
			-moz-transform: translateY(-0.5rem);
			-webkit-transform: translateY(-0.5rem);
			-ms-transform: translateY(-0.5rem);
			transform: translateY(-0.5rem);
		}

	}

	@media screen and (max-width: 980px) {

		#banner.wrapper {
			padding-bottom: 1rem;
			padding-top: 11rem;
		}

		#banner .image-wrapper {
			width: 40rem;
		}

	}

	@media screen and (max-width: 736px) {

		#banner.wrapper {
			max-width: 100%;
			padding-top: 10rem;
		}

		#banner .image-wrapper {
			width: 290px;
		}

			#banner .image-wrapper .image {
				top: 0.75rem;
			}

	}

	@media screen and (max-width: 480px) {

		#banner .image-wrapper .image {
			top: 0.6rem;
		}

	}

/* Main Wrapper */

	#wrapper section:first-child.wrapper.style1:before {
		background: #d54857;
		content: '';
		height: 19.5rem;
		left: 0;
		position: absolute;
		top: 0;
		width: 100%;
		z-index: 10001;
	}

	#wrapper section:last-child.wrapper.style1:before {
		background: #24242a;
		bottom: 0;
		content: '';
		height: 15rem;
		left: 0;
		position: absolute;
		width: 100%;
		z-index: 10001;
	}

/* Footer */

	#footer {
		text-align: center;
	}

		#footer .contact-form {
			margin-bottom: 8.25rem;
		}

			#footer .contact-form ul {
				margin-bottom: 0;
			}

		#footer .contact-info {
			display: -moz-flex;
			display: -webkit-flex;
			display: -ms-flex;
			display: flex;
			-moz-flex-wrap: wrap;
			-webkit-flex-wrap: wrap;
			-ms-flex-wrap: wrap;
			flex-wrap: wrap;
			-moz-align-items: center;
			-webkit-align-items: center;
			-ms-align-items: center;
			align-items: center;
			-moz-justify-content: space-between;
			-webkit-justify-content: space-between;
			-ms-justify-content: space-between;
			justify-content: space-between;
			margin: 0 auto 5.5rem auto;
			padding-left: 2rem;
			width: 40rem;
		}

			#footer .contact-info .item {
				display: -moz-flex;
				display: -webkit-flex;
				display: -ms-flex;
				display: flex;
				-moz-align-items: center;
				-webkit-align-items: center;
				-ms-align-items: center;
				align-items: center;
				height: 2.75rem;
				margin-bottom: 2.75rem;
				text-align: left;
				width: 18rem;
			}

				#footer .contact-info .item p {
					margin: 0;
				}

				#footer .contact-info .item a {
					color: rgba(255, 255, 255, 0.5);
					text-decoration: none;
				}
/* ... */

